deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: krokfmt
  labels:
    name: krokfmt
