deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krokfmt-web
  namespace: krokfmt
  labels:
    app: krokfmt-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: krokfmt-web
